Bug fix: make post-actions visible when post is expanded

--- a/app/assets/stylesheets/posts.css.less
+++ b/app/assets/stylesheets/posts.css.less
@@ -8,6 +8,10 @@
     margin-top: 6px;
     margin-bottom: 0;
   }
+  
+  &.expanded .show-on-hover {
+    visibility: visible;
+  }
 }
 
 .post-actions {  
